# agc2025

./: .gitignore  README.md  calculate_r.py  compare.py  environment.yaml  experiment_script.py  main.py  pyproject.toml  test.py
XMark/: XMark_Example(update).ipynb
configs/: paper_default.yaml
configs/hparams/: hparams_search.json
src/: artificial.py  baseline.py  evaluator.py  evalutor.py  experiment.py  expreiment_script.py  graph.py  helpers.py  ml_jnmf.py  plot.py  processor.py  run.py  test.py  visualize.py
src/experiment_results_analysis/: 1.py  citeseer.py  convergence_ana.py  metrices_ana.py  param_ana.py
src/experiment_scripts/: baseline.py  citeseer  search.py  test1.py  test_three_edges.py
src/processing_scripts/: citeseer_and_cora.py  git_web_ml.py  lasftm_asia.py  llf.py
src/rscript/: plot.R
visualization/: 3d_surface_plot.ipynb  clustered_adjacency.ipynb
